# lunarenderer

./: CMakeLists.txt  README.md  light.h  lunarender.h  main.cpp  model.cpp  model.h  rasterizer.cpp  rasterizer.h  shader.cpp  shader.h  shader.hpp  texture.hpp  tgaimage.cpp  tgaimage.h  triangle.cpp  triangle.h
models/jett/jett-keychain/source/: ChibiJett.7z
models/jett/jett-keychain/source/ChibiJett/Materials/: Buddy_ChibiJett_AEM.dds  Buddy_ChibiJett_DF.dds  Buddy_ChibiJett_MI.mat  Buddy_ChibiJett_MI.props.txt  Buddy_ChibiJett_MRS.dds  Buddy_ChibiJett_NM.dds  Gunbuddy_ChibiJett_Icon.dds
models/jett/jett-keychain/source/ChibiJett/Models/: GN_Buddies_ChibiJett_Charm_Staticmesh.gltf  gn_buddies_chibijett_charm_staticmesh.mtl
models/luna/models/heroes/luna/smd/: luna_body.smd  luna_head.smd  luna_mount.smd  luna_offhand_weapon.smd  luna_shoulders.smd  luna_weapon.smd
models/omen/source/: new_omen.mtl  new_omen_model_valorant.mtl
models/omen/textures/: ImageToStl.com_tp_wraith_s0_df.tga.tga
